fix spacing css

--- a/src/App.css
+++ b/src/App.css
@@ -133,6 +133,15 @@ img {
 .result {
   margin-right:140px;
   text-align: center;
-  margin-left:300 px;
+  margin-left:-20px;
+  margin-top:110px;
+  font-size: 40px;
   
+}
+
+
+select {
+  font-family:cursive;
+  color:#F7882F;
+  font-size: 16px;
 }
